c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/sizeof_incomplete_expr.c
struct s;
struct s *get_ptr(void);

int main(void) {
    struct s *struct_ptr = get_ptr();

    // can't apply sizeof to expression w/ incomplete type
    return sizeof(*struct_ptr);
}